2005-09-04  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnweb.el (nnweb-type-definition, nnweb-google-wash-article):
	Make fetching article by MID work again for Google Groups.  Added
	FIXME concerning gnus-group-make-web-group.

	* mml-smime.el (mml-smime-sign-query, mml-smime-get-dns-cert):
	Don't depend on Gnus by using mail-extract-address-components if
	gnus-extract-address-components is not bound.

2005-09-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-mime-display-security): Don't display the
	signature, but only the signed part.

2005-09-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-thread-hide-subtree): Doc fix.

	* gnus-msg.el (gnus-inews-insert-gcc): Fix the mistake of using
	list, not listp.

2005-09-02  Hrvoje Niksic  <hniksic@xemacs.org>

	* mm-encode.el (mm-encode-content-transfer-encoding): Likewise
	when encoding.

	* mm-bodies.el (mm-decode-content-transfer-encoding):
	De-canonicalize CRLF for all text content types, not just
	text/plain.

2005-09-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-part-wrapper): Error if there's no
	valid article; point arrow and cursor at the MIME button.

2005-08-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-save-part-and-strip): Clarify prompt.
	Suggested by Dan Christensen <jdc@uwo.ca>.

	* mm-decode.el (mm-save-part): Enable change of prompt.

2005-08-29  Jari Aalto  <jari.aalto@cante.net>

	* gnus-msg.el (gnus-inews-add-send-actions): Made
	`message-post-method' lambda parameter ARG `&optional'.

2005-08-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-summary-mime-map): Added
	gnus-article-save-part-and-strip, gnus-article-delete-part and
	gnus-article-jump-to-part.

	* gnus-art.el (gnus-article-edit-article): Added quiet argument.
	(gnus-article-edit-part): Use it.
	(gnus-article-part-wrapper): Added no-handle argument.
	(gnus-article-save-part-and-strip, gnus-article-delete-part): New
	functions.
